# rsonpath-benchmarks

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  build.rs  dl.sh  rsonpath-benchmarks.code-workspace
.github/workflows/: rust.yml
benches/: ast.rs  classifier.rs  crossref.rs  main.rs  main_micro.rs  openfood.rs  paper_parity.rs  paper_parity_jsurfer.rs  paper_rewrite.rs  rsonpath_query_compilation.rs  rust_native.rs  twitter.rs  twitter_jsonski.rs  wikidata.rs  wikipedia_jsonski.rs
chart/: __main__.py  draw_plot.py  extract_info.py
charts/: charts.py  dataset_stat.py  draw_plot.py  extract_info.py  query_stat.py
data/ast/: ast.json
data/basic/: child.json  child_hell.json  escapes.json  quote_escape.json  skipping.json  small.json  small_no_list.json  spaced_colon.json  twitter.json  twitter_simple.json  twitter_simplified.json  twitter_urls.json
data/basic_compressed/: child.json  child_hell.json  escapes.json  fake1.json  fake2.json  fake3.json  quote_escape.json  skipping.json  small.json  small_no_list.json  twitter.json  twitter_simple.json  twitter_urls.json
data/openfood/: openfood.json
data/wikidata/compressed/: wikidata_person.json  wikidata_profession.json  wikidata_properties.json
exps/chetemi/._data_ast_ast.json_decl_name/jsurfer/base/: estimates.json  sample.json
exps/chetemi/._data_ast_ast.json_decl_name/jsurfer/new/: benchmark.json  estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_decl_name/rsonpath-recursive/base/: sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_decl_name/rsonpath-recursive/new/: benchmark.json  estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_decl_name/rsonpath/new/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_included_from/jsurfer/base/: estimates.json  tukey.json
exps/chetemi/._data_ast_ast.json_included_from/jsurfer/new/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_included_from/rsonpath-recursive/base/: estimates.json  sample.json
exps/chetemi/._data_ast_ast.json_included_from/rsonpath-recursive/new/: estimates.json  tukey.json
exps/chetemi/._data_ast_ast.json_included_from/rsonpath/base/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_included_from/rsonpath/new/: benchmark.json  estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/jsurfer/base/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/jsurfer/new/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/rsonpath-recursive/base/: sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/rsonpath-recursive/new/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/rsonpath/base/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_ast_ast.json_nested_inner/rsonpath/new/: benchmark.json  estimates.json  tukey.json
exps/chetemi/._data_crossref_crossref0.json_scalability_affiliation0/rsonpath/base/: benchmark.json  estimates.json  sample.json  tukey.json
exps/chetemi/._data_crossref_crossref0.json_scalability_affiliation0/rsonpath/new/: estimates.json  sample.json  tukey.json
exps/chetemi/._data_crossref_crossref1.json_DOI/jsurfer/base/: tukey.json
exps/chetemi/._data_crossref_crossref1.json_DOI/jsurfer/new/: benchmark.json  estimates.json  sample.json
exps/chetemi/._data_crossref_crossref1.json_DOI/rsonpath-recursive/base/: sample.json  tukey.json
exps/chetemi/._data_crossref_crossref1.json_DOI/rsonpath-recursive/new/: benchmark.json  estimates.json
exps/chetemi/._data_crossref_crossref1.json_DOI/rsonpath/base/: estimates.json  sample.json
exps/chetemi/._data_crossref_crossref1.json_DOI/rsonpath/new/: benchmark.json  tukey.json
exps/chetemi/._data_crossref_crossref1.json_author_affiliation/jsonski/base/: estimates.json
exps/chetemi/._data_crossref_crossref1.json_author_affiliation/jsonski/new/: sample.json  tukey.json
exps/chetemi/._data_crossref_crossref1.json_author_affiliation/jsurfer/base/: tukey.json
implementations/jsonski/: JSONPathParser.cpp  QueryProcessor.cpp  RecordLoader.cpp  RecordLoader.h  Records.h  RustEntryPoint.cpp  RustEntryPoint.h
results/chetemi/: data.csv
src/: dataset.rs  framework.rs  jsonpath_rust.rs  lib.rs  macros.rs  main.rs  prelude.rs  rsonpath.rs  rust_jsonski.rs  rust_jsurfer.rs  serde_json_path.rs
src/framework/: benchmark_options.rs  dataset.rs  implementation.rs  json_document.rs
src/implementations/: jsonpath_rust.rs  rsonpath.rs
(+3837 files in other folders)
