[package]
name = "rsonpath-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
criterion = "0.4.0"
jni = { version = "0.19.0", features = ["invocation", "default"] }
libc = "0.2.126"
lazy_static = "1.4.0"
ouroboros = "0.15.5"
rsonpath = { git = "https://github.com/V0ldek/rsonpath", branch = "bench/many", default-features = false }
thiserror = "1.0.37"

[dev-dependencies]
itertools = "0.10.3"
regex = "1.6.0"
memchr = "2.5.0"

[features]
default = ["simd"]
simd = ["rsonpath/simd"]
commas = ["rsonpath/commas"]

[build-dependencies]
cc = "1.0"
eyre = "0.6.8"


[[bench]]
name = "crossref"
harness = false

[[bench]]
name = "twitter"
harness = false

[[bench]]
name = "ast"
harness = false
