[package]
name = "rsonpath-benchmarks"
authors = [
    "Mateusz Gienieczko <mat@gienieczko.com>",
    "Charles Paperman <charles.paperman@inria.fr>",
]
version = "0.6.1"
edition = "2021"
description = "Benchmark suite for the `rsonpath` project."
readme = "./README.md"
license = "MIT"
keywords = ["rsonpath", "jsonpath", "query", "simd", "benchmark"]
exclude = ["/data"]
categories = ["text-processing", "development-tools"]
repository = "https://github.com/V0ldek/rsonpath-benchmarks"

[[bin]]
path = "src/main.rs"
name = "pathimpl"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.1.11", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.2", default-features = false }
criterion = "0.5.1"
eyre = "0.6.8"
flate2 = "1.0.25"
hex-literal = "0.4.0"
indicatif = "0.17.3"
jni = { version = "0.21.1", features = ["invocation", "default"] }
jsonpath-rust = "0.3.0"
libc = "0.2.126"
lazy_static = "1.4.0"
serde_json = "1.0.95"
sha2 = "0.10.6"
ouroboros = "0.17.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
rsonpath-lib = { version = "0.6.1", default-features = false }
serde_json_path = "0.6.0"
tar = "0.4.38"
thiserror = "1.0.43"

[patch.crates-io]
rsonpath-lib = { path = "../rsonpath-lib" }

[dev-dependencies]
itertools = "0.11.0"
regex = "1.6.0"
memchr = "2.5.0"

[features]
default = ["simd"]
simd = ["rsonpath-lib/simd"]

[build-dependencies]
cc = "1.0"
eyre = "0.6.8"

[profile.dev]
lto = false

[profile.release]
lto = "thin"
debug = 1

[[bench]]
name = "ast"
harness = false

[[bench]]
name = "crossref"
harness = false

[[bench]]
name = "main"
harness = false

[[bench]]
name = "openfood"
harness = false

[[bench]]
name = "paper_parity"
harness = false

[[bench]]
name = "paper_rewrite"
harness = false

[[bench]]
name = "rsonpath_query_compilation"
harness = false

[[bench]]
name = "rust_native"
harness = false

[[bench]]
name = "twitter"
harness = false
